# elo-predictor

./: pyproject.toml
notebooks/: 01_chess_data_cleaning.ipynb  02_fasttext_train.ipynb  03_chess_data_scaling.ipynb  04_elo_prediction.ipynb  04_elo_predictor_model.ipynb
pre-processing/: convert-csv.go
utils/: data.py  models.py
