[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ipykernel = "^6.29.5"
torch = "^2.6.0"
pandas = "^2.2.3"
tables = "^3.10.2"
scikit-learn = "^1.6.1"
fasttext-wheel = "^0.9.2"
dask = {extras = ["dataframe"], version = "^2025.1.0"}
pyarrow = "14.0.1"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
torcheval = "^0.0.7"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
